# romer-traxxas

./: .gitignore  Dockerfile  bash.bash  entrypoint.bash  image.bash  init.vim  prune.bash  run.bash
traxxas_ws/devel/: .catkin  .rosinstall  setup.sh
traxxas_ws/devel/include/controller/: ControllerOut.h
traxxas_ws/devel/include/imu_parser/: IMUData.h  IMURaw.h
traxxas_ws/devel/include/relay/: RelayState.h  Steer.h
traxxas_ws/devel/include/tcp_parser/: GPSData.h
traxxas_ws/devel/lib/controller/: controller_node
traxxas_ws/devel/lib/imu_parser/: imu_parser_node
traxxas_ws/devel/lib/pkgconfig/: arduino.pc  controller.pc  imu_parser.pc  relay.pc  tcp_parser.pc
traxxas_ws/devel/lib/python3/dist-packages/controller/msg/: _ControllerOut.py  __init__.py
traxxas_ws/devel/lib/python3/dist-packages/imu_parser/msg/: _IMUData.py  _IMURaw.py  __init__.py
traxxas_ws/devel/lib/python3/dist-packages/relay/msg/: _RelayState.py  _Steer.py  __init__.py
traxxas_ws/devel/lib/python3/dist-packages/tcp_parser/msg/: _GPSData.py  __init__.py
traxxas_ws/devel/lib/relay/: relay_node
traxxas_ws/devel/lib/tcp_parser/: tcp_parser_node
traxxas_ws/devel/share/arduino/: traxxas.elf  traxxas.hex
traxxas_ws/devel/share/arduino/cmake/: arduinoConfig.cmake
traxxas_ws/devel/share/common-lisp/ros/controller/msg/: ControllerOut.lisp  _package.lisp  _package_ControllerOut.lisp  controller-msg.asd
traxxas_ws/devel/share/common-lisp/ros/imu_parser/msg/: IMUData.lisp  IMURaw.lisp  _package.lisp  _package_IMUData.lisp  imu_parser-msg.asd
traxxas_ws/devel/share/common-lisp/ros/relay/msg/: RelayState.lisp  Steer.lisp  _package.lisp  _package_RelayState.lisp  _package_Steer.lisp  relay-msg.asd
traxxas_ws/devel/share/common-lisp/ros/tcp_parser/msg/: GPSData.lisp  _package.lisp  _package_GPSData.lisp  tcp_parser-msg.asd
traxxas_ws/devel/share/controller/cmake/: controller-msg-paths.cmake  controllerConfig.cmake
traxxas_ws/devel/share/gennodejs/ros/controller/msg/: ControllerOut.js  _index.js
traxxas_ws/devel/share/gennodejs/ros/imu_parser/msg/: IMUData.js  IMURaw.js  _index.js
traxxas_ws/devel/share/gennodejs/ros/relay/msg/: RelayState.js  Steer.js  _index.js
traxxas_ws/devel/share/gennodejs/ros/tcp_parser/msg/: GPSData.js  _index.js
traxxas_ws/devel/share/imu_parser/cmake/: imu_parser-msg-extras.cmake  imu_parser-msg-paths.cmake  imu_parserConfig.cmake
traxxas_ws/devel/share/relay/cmake/: relay-msg-extras.cmake  relay-msg-paths.cmake  relayConfig.cmake
traxxas_ws/devel/share/roseus/ros/controller/: manifest.l
traxxas_ws/devel/share/roseus/ros/controller/msg/: ControllerOut.l
traxxas_ws/devel/share/roseus/ros/imu_parser/: manifest.l
traxxas_ws/devel/share/roseus/ros/imu_parser/msg/: IMUData.l  IMURaw.l
traxxas_ws/devel/share/roseus/ros/relay/: manifest.l
traxxas_ws/devel/share/roseus/ros/relay/msg/: RelayState.l  Steer.l
traxxas_ws/devel/share/roseus/ros/tcp_parser/: manifest.l
traxxas_ws/devel/share/tcp_parser/cmake/: tcp_parser-msg-paths.cmake  tcp_parserConfig.cmake
traxxas_ws/src/arduino/: CMakeLists.txt
traxxas_ws/src/arduino/firmware/: CMakeLists.txt  main.cpp
traxxas_ws/src/arduino/firmware/Adafruit_I2CDevice/: Adafruit_I2CDevice.cpp
traxxas_ws/src/controller/: CMakeLists.txt  package.xml
traxxas_ws/src/controller/msg/: ControllerOut.msg
traxxas_ws/src/controller/src/: baseGPS.txt  controller_node.cpp  controller_ver_2.py  coordinateConvert.py  gpsgetPLUSarduino.py
traxxas_ws/src/controller/srv/: GPSCoordinate.srv
traxxas_ws/src/imu_parser/: CMakeLists.txt  package.xml
traxxas_ws/src/imu_parser/msg/: IMUData.msg  IMURaw.msg
traxxas_ws/src/imu_parser/src/: imu_parser_node.cpp
traxxas_ws/src/relay/: CMakeLists.txt  package.xml
traxxas_ws/src/relay/include/relay/: time_util.hpp
traxxas_ws/src/relay/msg/: RelayState.msg
traxxas_ws/src/relay/src/: relay_node.cpp
traxxas_ws/src/tcp_parser/: CMakeLists.txt  package.xml
traxxas_ws/src/tcp_parser/src/: tcp_parser_node.cpp
traxxas_ws/src/traxxas_run/: CMakeLists.txt  package.xml
traxxas_ws/src/traxxas_run/launch/: traxxas.launch
volkan/: controller_ver_3.py  coordinateConvert.py  gpsget.py  gpsgetPLUSarduino.py  onlyArduino.py
(+1 files in other folders)
